fix overflow bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,6 +47,11 @@ body {
   overflow-anchor: none;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 img, svg {
   max-width: 100%;
   height: auto;
@@ -525,7 +530,6 @@ blockquote {
   position: relative;
   z-index: 0;
   padding-bottom: 6rem;
-  overflow-x: hidden;
 
   &__flex {
     display: flex;
